--- a/src/main/resources/com/example/real_estate_software/AddProperty.fxml
+++ b/src/main/resources/com/example/real_estate_software/AddProperty.fxml
@@ -1,44 +1,53 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-
-
+<?import org.kordamp.ikonli.javafx.FontIcon?>
 <?import javafx.scene.shape.Rectangle?>
-
-
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.geometry.Insets?>
-<?import org.kordamp.ikonli.javafx.FontIcon?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.Group?>
-
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="580.0" prefWidth="780.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.real_estate_software.controller.AddPropertyController">
 
-
+    <!-- Left and Top Pane for Header and Navigation -->
     <Pane prefHeight="580.0" prefWidth="75.0" styleClass="sidebar" AnchorPane.leftAnchor="0.0">
 
-        <HBox alignment="CENTER" layoutY="94.0" prefHeight="65.0" prefWidth="75.0">
+        <!-- Add Property Header Section -->
+        <VBox layoutX="74" prefHeight="75" prefWidth="705.0" alignment="CENTER" styleClass="top-border">
+            <Text layoutX="277.0" layoutY="37.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Add Property">
+                <font>
+                    <Font size="24.0"/>
+                </font>
+            </Text>
+        </VBox>
+
+        <!-- Back Button -->
+        <HBox alignment="CENTER" layoutX="4.0" layoutY="20.0" prefHeight="65.0" prefWidth="75.0">
             <padding>
                 <Insets left="8.0" right="12.0"/>
             </padding>
-            <HBox alignment="CENTER" prefHeight="65.0" prefWidth="75.0">
-                <padding>
-                    <Insets left="8.0" right="12.0"/>
-                </padding>
-                <FontIcon iconLiteral="fas-home" iconSize="24" styleClass="fontawesomeicon"/>
-            </HBox>
+            <Button fx:id="backButton" layoutX="4.0" layoutY="20.0" mnemonicParsing="false" text="Back" onAction="#onBackClick"/>
         </HBox>
 
-        <HBox alignment="CENTER" layoutX="4.0" layoutY="159.0" prefHeight="65.0" prefWidth="64.0">
+        <!-- Home Button -->
+        <HBox alignment="CENTER" layoutX="4.0" layoutY="94.0" prefHeight="65.0" prefWidth="75.0">
+            <padding>
+                <Insets left="8.0" right="12.0"/>
+            </padding>
+            <Button fx:id="homeButton" styleClass="icon-button" onAction="#handleHomeClick">
+                <graphic>
+                    <FontIcon iconLiteral="fas-home" iconSize="24" styleClass="fontawesomeicon"/>
+                </graphic>
+            </Button>
+        </HBox>
+
+        <!-- Edit Button -->
+        <HBox alignment="CENTER" layoutX="4.0" layoutY="159.0" prefHeight="65.0" prefWidth="75.0">
             <padding>
                 <Insets left="8.0" right="12.0"/>
             </padding>
@@ -49,7 +58,7 @@
             </Button>
         </HBox>
 
-
+        <!-- Settings Button -->
         <HBox alignment="CENTER" layoutX="4.0" layoutY="224.0" prefHeight="65.0" prefWidth="75.0">
             <padding>
                 <Insets left="8.0" right="12.0"/>
@@ -61,8 +70,7 @@
             </Button>
         </HBox>
 
-
-
+        <!-- Charts Button -->
         <HBox alignment="CENTER" layoutX="4.0" layoutY="289.0" prefHeight="65.0" prefWidth="75.0">
             <padding>
                 <Insets left="8.0" right="12.0"/>
@@ -74,8 +82,7 @@
             </Button>
         </HBox>
 
-
-
+        <!-- Sign Out Button -->
         <HBox alignment="CENTER" layoutX="4.0" layoutY="450.0" prefHeight="65.0" prefWidth="75.0">
             <padding>
                 <Insets left="8.0" right="12.0"/>
@@ -86,54 +93,35 @@
                 </graphic>
             </Button>
         </HBox>
-
-
-        <Label layoutX="4.0" layoutY="5.0" styleClass="HOME" text="ESTATE" textFill="#c6baba">
-            <font>
-                <Font name="Hoefler Text Black" size="14.0"/>
-            </font>
-        </Label>
     </Pane>
+
     <!-- Background Rectangle -->
     <Rectangle arcHeight="10.0" arcWidth="10.0" fill="#add8ffa2" height="400.0" stroke="BLACK" strokeType="INSIDE" width="500.0" layoutX="90" layoutY="90"/>
 
     <!-- Address Label and TextField -->
-    <Text layoutX="150" layoutY="140" strokeType="OUTSIDE" strokeWidth="0.0" text="Address" />
-    <TextField fx:id="addressField" layoutX="250" layoutY="130" prefWidth="200"/>
+    <Text layoutX="150" layoutY="165" strokeType="OUTSIDE" strokeWidth="0.0" text="Address" />
+    <TextField fx:id="addressField" layoutX="250" layoutY="150" prefWidth="200"/>
 
     <!-- Beds Label and TextField -->
-    <Text layoutX="150" layoutY="220" strokeType="OUTSIDE" strokeWidth="0.0" text="Beds" />
-    <TextField fx:id="bedsField" layoutX="250" layoutY="210" prefWidth="200"/>
+    <Text layoutX="150" layoutY="205" strokeType="OUTSIDE" strokeWidth="0.0" text="Beds" />
+    <TextField fx:id="bedsField" layoutX="250" layoutY="190" prefWidth="200"/>
 
     <!-- Baths Label and TextField -->
-    <Text layoutX="150" layoutY="260" strokeType="OUTSIDE" strokeWidth="0.0" text="Baths" />
-    <TextField fx:id="bathsField" layoutX="250" layoutY="250" prefWidth="200"/>
+    <Text layoutX="150" layoutY="245" strokeType="OUTSIDE" strokeWidth="0.0" text="Baths" />
+    <TextField fx:id="bathsField" layoutX="250" layoutY="230" prefWidth="200"/>
 
     <!-- Cars Label and TextField -->
-    <Text layoutX="150" layoutY="300" strokeType="OUTSIDE" strokeWidth="0.0" text="Cars" />
-    <TextField fx:id="carsField" layoutX="250" layoutY="290" prefWidth="200"/>
+    <Text layoutX="150" layoutY="285" strokeType="OUTSIDE" strokeWidth="0.0" text="Cars" />
+    <TextField fx:id="carsField" layoutX="250" layoutY="270" prefWidth="200"/>
 
     <!-- Rent Label and TextField -->
-    <Text layoutX="150" layoutY="340" strokeType="OUTSIDE" strokeWidth="0.0" text="Rent" />
-    <TextField fx:id="rentField" layoutX="250" layoutY="330" prefWidth="200"/>
+    <Text layoutX="150" layoutY="325" strokeType="OUTSIDE" strokeWidth="0.0" text="Rent" />
+    <TextField fx:id="rentField" layoutX="250" layoutY="310" prefWidth="200"/>
 
     <!-- Utilities Label and TextField -->
-    <Text layoutX="150" layoutY="380" strokeType="OUTSIDE" strokeWidth="0.0" text="Utilities" />
-    <TextField fx:id="utilitiesField" layoutX="250" layoutY="370" prefWidth="200"/>
+    <Text layoutX="150" layoutY="365" strokeType="OUTSIDE" strokeWidth="0.0" text="Utilities" />
+    <TextField fx:id="utilitiesField" layoutX="250" layoutY="350" prefWidth="200"/>
 
-    <!-- Buttons aligned to the right -->
-    <Button fx:id="saveButton" layoutX="480" layoutY="420" text="Save" />
-    <Button fx:id="cancelButton" layoutX="400" layoutY="420" text="Cancel" />
+    <Button fx:id="addPropertyButton"  layoutX="300.0" layoutY="420.0" mnemonicParsing="false"  text="Add Property" onAction="#onAddPropertyClick"/>
 
-
-
-    <VBox layoutX="74" layoutY="0.0" prefHeight="75" prefWidth="705.0" alignment="CENTER" spacing="10" styleClass="top-border">
-    <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Add Tenant">
-        <font>
-            <Font size="24.0"/>
-        </font>
-    </Text>
-    </VBox>
-    <Button fx:id="addButton"  layoutX="280.0" layoutY="420.0" mnemonicParsing="false"  text="Add Property" onAction="#onAddClick"/>
-    <Button fx:id="backButton"  layoutX="100.0" layoutY="9.0" mnemonicParsing="false"  text="Go Back" onAction="#onBackClick"/>
 </AnchorPane>
