--- a/src/main/resources/com/example/real_estate_software/AddTenant.fxml
+++ b/src/main/resources/com/example/real_estate_software/AddTenant.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import org.kordamp.ikonli.javafx.FontIcon?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
@@ -10,33 +11,47 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.geometry.Insets?>
-<?import org.kordamp.ikonli.javafx.FontIcon?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.VBox?>
 
 <!-- The Add Tenant FXML was created in Scenebuilder which allows the Owner to add a Tenant to the associated property -->
 <!-- The owner will be able to assign the following properties to the Tenant profile -->
 <!-- Tenant First and Last Name, Email Address, Phone Number and Image associated with the Tenant-->
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="580.0" prefWidth="780.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.real_estate_software.controller.AddTenantController">
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="580.0"
-      prefWidth="780.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1"
-      fx:controller="com.example.real_estate_software.controller.AddTenantController">
-
+    <!-- Left and Top Pane for Header and Navigation -->
     <Pane prefHeight="580.0" prefWidth="75.0" styleClass="sidebar" AnchorPane.leftAnchor="0.0">
 
-        <HBox alignment="CENTER" layoutY="94.0" prefHeight="65.0" prefWidth="75.0">
+        <!-- Add Tenant Header Section -->
+        <VBox layoutX="74" prefHeight="75" prefWidth="705.0" alignment="CENTER" styleClass="top-border">
+            <Text layoutX="277.0" layoutY="37.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Add Tenant">
+                <font>
+                    <Font size="24.0"/>
+                </font>
+            </Text>
+        </VBox>
+
+        <!-- Back Button -->
+        <HBox alignment="CENTER" layoutX="4.0" layoutY="20.0" prefHeight="65.0" prefWidth="75.0">
             <padding>
                 <Insets left="8.0" right="12.0"/>
             </padding>
-            <HBox alignment="CENTER" prefHeight="65.0" prefWidth="75.0">
-                <padding>
-                    <Insets left="8.0" right="12.0"/>
-                </padding>
-                <FontIcon iconLiteral="fas-home" iconSize="24" styleClass="fontawesomeicon"/>
-            </HBox>
+            <Button fx:id="backButton" layoutX="4.0" layoutY="20.0" mnemonicParsing="false" text="Back" onAction="#onBackClick"/>
         </HBox>
 
-        <HBox alignment="CENTER" layoutX="4.0" layoutY="159.0" prefHeight="65.0" prefWidth="64.0">
+        <!-- Home Button -->
+        <HBox alignment="CENTER" layoutX="4.0" layoutY="94.0" prefHeight="65.0" prefWidth="75.0">
+            <padding>
+                <Insets left="8.0" right="12.0"/>
+            </padding>
+            <Button fx:id="homeButton" styleClass="icon-button" onAction="#handleHomeClick">
+                <graphic>
+                    <FontIcon iconLiteral="fas-home" iconSize="24" styleClass="fontawesomeicon"/>
+                </graphic>
+            </Button>
+        </HBox>
+
+        <!-- Edit Button -->
+        <HBox alignment="CENTER" layoutX="4.0" layoutY="159.0" prefHeight="65.0" prefWidth="75.0">
             <padding>
                 <Insets left="8.0" right="12.0"/>
             </padding>
@@ -47,7 +62,7 @@
             </Button>
         </HBox>
 
-
+        <!-- Settings Button -->
         <HBox alignment="CENTER" layoutX="4.0" layoutY="224.0" prefHeight="65.0" prefWidth="75.0">
             <padding>
                 <Insets left="8.0" right="12.0"/>
@@ -59,8 +74,7 @@
             </Button>
         </HBox>
 
-
-
+        <!-- Charts Button -->
         <HBox alignment="CENTER" layoutX="4.0" layoutY="289.0" prefHeight="65.0" prefWidth="75.0">
             <padding>
                 <Insets left="8.0" right="12.0"/>
@@ -72,8 +86,7 @@
             </Button>
         </HBox>
 
-
-
+        <!-- Sign Out Button -->
         <HBox alignment="CENTER" layoutX="4.0" layoutY="450.0" prefHeight="65.0" prefWidth="75.0">
             <padding>
                 <Insets left="8.0" right="12.0"/>
@@ -84,44 +97,19 @@
                 </graphic>
             </Button>
         </HBox>
-
-
-        <Label layoutX="4.0" layoutY="5.0" styleClass="HOME" text="ESTATE" textFill="#c6baba">
-            <font>
-                <Font name="Hoefler Text Black" size="14.0"/>
-            </font>
-        </Label>
     </Pane>
 
-    <VBox layoutX="74" layoutY="0.0" prefHeight="75" prefWidth="705.0" alignment="CENTER" spacing="10" styleClass="top-border">
-        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Add Tenant">
-            <font>
-                <Font size="24.0"/>
-            </font>
-        </Text>
-
-    </VBox>
-
-
-
-
-
-    <Button fx:id = "backButton" layoutX="100.0" layoutY="9.0" mnemonicParsing="false" text="Back" onAction="#onBackClick"/>
-    <Text layoutX="290" layoutY="150.0" strokeType="OUTSIDE" strokeWidth="0.0" text="First Name" />
-    <TextField fx:id="firstNameField" layoutX="110.0" layoutY="135.0" />
-    <Text layoutX="290" layoutY="190.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Last Name" />
-    <TextField fx:id="lastNameField" layoutX="110.0" layoutY="175.0" />
-    <Text layoutX="290" layoutY="235.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Email Address" />
-    <TextField fx:id="emailField" layoutX="110.0" layoutY="220.0" />
-    <Text layoutX="290" layoutY="275.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Phone Number" />
-    <TextField fx:id="phoneNumberField" layoutX="110.0" layoutY="260.0" />
-    <Button fx:id = "saveButton" layoutX="146.0" layoutY="301.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="53.0" text="Save" onAction="#onSaveClick" />
+    <TextField fx:id="firstNameField" layoutX="120.0" layoutY="140.0" promptText="First Name"/>
+    <TextField fx:id="lastNameField" layoutX="120.0" layoutY="180.0" promptText="Last Name"/>
+    <TextField fx:id="emailField" layoutX="120.0" layoutY="220.0" promptText="Email Address"/>
+    <TextField fx:id="phoneNumberField" layoutX="120.0" layoutY="260.0" promptText="Phone Number"/>
+    <Button fx:id="addTenantButton" layoutX="150.0" layoutY="300.0" mnemonicParsing="false" text="Add Tenant" onAction="#onAddTenantClick" />
 
     <VBox alignment="CENTER" spacing="10" layoutY="134" layoutX="400">
         <ImageView fitHeight="149.0" fitWidth="198.0" pickOnBounds="true" preserveRatio="true">
-            <Image url="@images/Profile Icon.jpg"/>
+            <Image url="@images/ProfileIcon.jpg"/>
         </ImageView>
-
         <Button fx:id="addImageButton" mnemonicParsing="false" text="Add Image" onAction="#onAddImageClick"/>
     </VBox>
+
 </Pane>
