--- a/src/main/resources/com/example/real_estate_software/Charts.fxml
+++ b/src/main/resources/com/example/real_estate_software/Charts.fxml
@@ -7,12 +7,11 @@
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
-
 <?import javafx.scene.control.Button?>
-<ScrollPane xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="com.example.real_estate_software.controller.ChartController"
-            fitToWidth="true" prefHeight="600.0" prefWidth="800.0">
-    <VBox spacing="20">
+
+<ScrollPane xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.real_estate_software.controller.ChartController" fitToWidth="true" prefHeight="600.0" prefWidth="800.0">
+
+    <VBox spacing="20" alignment="CENTER">
 
         <HBox spacing="20">
 
@@ -37,13 +36,14 @@
                     </yAxis>
                 </BarChart>
 
-                <Button fx:id = "backButton" layoutX="14.0" layoutY="55.0" mnemonicParsing="false" text="Back" onAction="#handleBackButtonClick"/>
             </VBox>
 
-
             <PieChart fx:id="propertyPieChart" prefHeight="400.0" prefWidth="300.0" />
-             </HBox>
 
+        </HBox>
+
+        <Button fx:id="backButton" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" text="Back" onAction="#handleBackButtonClick"/>
 
     </VBox>
+
 </ScrollPane>
