--- a/src/main/resources/com/example/real_estate_software/EditAccount.fxml
+++ b/src/main/resources/com/example/real_estate_software/EditAccount.fxml
@@ -1,50 +1,53 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-
-
-
-<?import javafx.scene.control.TextField?>
-
-<?import javafx.scene.shape.Rectangle?>
-
-<?import javafx.scene.text.Text?>
-
-
 <?import org.kordamp.ikonli.javafx.FontIcon?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.text.Text?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
-<?import javafx.scene.paint.Color?>
-<?import javafx.scene.shape.Circle?>
 <?import javafx.scene.text.Font?>
-<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.VBox?>
-
-
-
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="580.0" prefWidth="780.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.real_estate_software.controller.EditAccountController">
 
-
+    <!-- Left and Top Pane for Header and Navigation -->
     <Pane prefHeight="580.0" prefWidth="75.0" styleClass="sidebar" AnchorPane.leftAnchor="0.0">
 
-        <HBox alignment="CENTER" layoutY="94.0" prefHeight="65.0" prefWidth="75.0">
+        <!-- Edit Account Header Section -->
+        <VBox layoutX="74" prefHeight="75" prefWidth="705.0" alignment="CENTER" styleClass="top-border">
+            <Text layoutX="277.0" layoutY="37.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Edit Account">
+                <font>
+                    <Font size="24.0"/>
+                </font>
+            </Text>
+        </VBox>
+
+        <!-- Back Button -->
+        <HBox alignment="CENTER" layoutX="4.0" layoutY="20.0" prefHeight="65.0" prefWidth="75.0">
             <padding>
                 <Insets left="8.0" right="12.0"/>
             </padding>
-            <HBox alignment="CENTER" prefHeight="65.0" prefWidth="75.0">
-                <padding>
-                    <Insets left="8.0" right="12.0"/>
-                </padding>
-                <FontIcon iconLiteral="fas-home" iconSize="24" styleClass="fontawesomeicon"/>
-            </HBox>
+            <Button fx:id="backButton" layoutX="4.0" layoutY="20.0" mnemonicParsing="false" text="Back" onAction="#onBackClick"/>
         </HBox>
 
-        <HBox alignment="CENTER" layoutX="4.0" layoutY="159.0" prefHeight="65.0" prefWidth="64.0">
+        <!-- Home Button -->
+        <HBox alignment="CENTER" layoutX="4.0" layoutY="94.0" prefHeight="65.0" prefWidth="75.0">
+            <padding>
+                <Insets left="8.0" right="12.0"/>
+            </padding>
+            <Button fx:id="homeButton" styleClass="icon-button" onAction="#handleHomeClick">
+                <graphic>
+                    <FontIcon iconLiteral="fas-home" iconSize="24" styleClass="fontawesomeicon"/>
+                </graphic>
+            </Button>
+        </HBox>
+
+        <!-- Edit Button -->
+        <HBox alignment="CENTER" layoutX="4.0" layoutY="159.0" prefHeight="65.0" prefWidth="75.0">
             <padding>
                 <Insets left="8.0" right="12.0"/>
             </padding>
@@ -55,7 +58,7 @@
             </Button>
         </HBox>
 
-
+        <!-- Settings Button -->
         <HBox alignment="CENTER" layoutX="4.0" layoutY="224.0" prefHeight="65.0" prefWidth="75.0">
             <padding>
                 <Insets left="8.0" right="12.0"/>
@@ -67,8 +70,7 @@
             </Button>
         </HBox>
 
-
-
+        <!-- Charts Button -->
         <HBox alignment="CENTER" layoutX="4.0" layoutY="289.0" prefHeight="65.0" prefWidth="75.0">
             <padding>
                 <Insets left="8.0" right="12.0"/>
@@ -80,8 +82,7 @@
             </Button>
         </HBox>
 
-
-
+        <!-- Sign Out Button -->
         <HBox alignment="CENTER" layoutX="4.0" layoutY="450.0" prefHeight="65.0" prefWidth="75.0">
             <padding>
                 <Insets left="8.0" right="12.0"/>
@@ -92,45 +93,27 @@
                 </graphic>
             </Button>
         </HBox>
-
-
-        <Label layoutX="4.0" layoutY="5.0" styleClass="HOME" text="ESTATE" textFill="#c6baba">
-            <font>
-                <Font name="Hoefler Text Black" size="14.0"/>
-            </font>
-        </Label>
     </Pane>
 
-    <Rectangle arcHeight="10.0" arcWidth="10.0" fill="#add8ffa2" height="300.0" layoutX="144.0" layoutY="118.0" stroke="BLACK" strokeType="INSIDE" width="500.0" />   <!-- First Name Label and TextField -->
+    <Rectangle arcHeight="10.0" arcWidth="10.0" fill="#add8ffa2" height="300.0" layoutX="144.0" layoutY="118.0" stroke="BLACK" strokeType="INSIDE" width="500.0" />
+
     <!-- First Name Label and TextField -->
-    <Text layoutX="221.0" layoutY="208.0" strokeType="OUTSIDE" strokeWidth="0.0" text="First Name" />
-    <TextField fx:id="firstNameField" layoutX="446.0" layoutY="208.0" />
+    <Text layoutX="221.0" layoutY="185.0" strokeType="OUTSIDE" strokeWidth="0.0" text="First Name" />
+    <TextField fx:id="firstNameField" layoutX="446.0" layoutY="170.0" />
 
     <!-- Last Name Label and TextField -->
-    <Text layoutX="221.0" layoutY="238.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Last Name" />
-    <TextField fx:id="lastNameField" layoutX="446.0" layoutY="238.0" />
+    <Text layoutX="221.0" layoutY="225.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Last Name" />
+    <TextField fx:id="lastNameField" layoutX="446.0" layoutY="210.0" />
 
     <!-- Email Address Label and TextField -->
-    <Text layoutX="220.0" layoutY="268.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Email Address" />
-    <TextField fx:id="emailField" layoutX="446.0" layoutY="268.0" />
+    <Text layoutX="220.0" layoutY="265.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Email Address" />
+    <TextField fx:id="emailField" layoutX="446.0" layoutY="250.0" />
 
     <!-- Password Label and TextField -->
-    <Text layoutX="220.0" layoutY="298.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Password" />
-    <TextField fx:id="passwordField" layoutX="446.0" layoutY="298.0" />
+    <Text layoutX="220.0" layoutY="305.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Password" />
+    <TextField fx:id="passwordField" layoutX="446.0" layoutY="290.0" />
 
-
-    <Button fx:id="editButton"  layoutX="244.0" layoutY="348.0" mnemonicParsing="false"  text="Edit Account" onAction="#onEditClick"/>
-    <Button fx:id="deleteButton"  layoutX="349.0" layoutY="348.0" mnemonicParsing="false"  text="Delete Account" onAction="#onDeleteClick"/>
-    <Button fx:id="backButton"  layoutX="464.0" layoutY="348.0" mnemonicParsing="false"  text="Go Back" onAction="#onBackClick"/>
-
-    <VBox layoutX="74" layoutY="0.0" prefHeight="75" prefWidth="705.0" alignment="CENTER" styleClass = "top-border">
-
-        <Text layoutX="199.0" layoutY="31.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Edit Account">
-
-            <font>
-                <Font size="24.0"/>
-            </font>
-        </Text>
-    </VBox>
+    <Button layoutX="300.0" layoutY="348.0" mnemonicParsing="false"  text="Edit Account" onAction="#onEditClick"/>
+    <Button fx:id="deleteAccountButton"  layoutX="400.0" layoutY="348.0" mnemonicParsing="false"  text="Delete Account" onAction="#onDeleteClick"/>
 
 </AnchorPane>
