--- a/src/main/resources/com/example/real_estate_software/EditProperty.fxml
+++ b/src/main/resources/com/example/real_estate_software/EditProperty.fxml
@@ -1,48 +1,54 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-
-
-<?import javafx.scene.control.TextField?>
-
-<?import javafx.scene.shape.Rectangle?>
-
-<?import javafx.scene.text.Text?>
-
 <?import org.kordamp.ikonli.javafx.FontIcon?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.text.Text?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
-<?import javafx.scene.paint.Color?>
-<?import javafx.scene.shape.Circle?>
 <?import javafx.scene.text.Font?>
-<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.VBox?>
-
 <?import javafx.scene.control.ListView?>
-
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="580.0" prefWidth="780.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.real_estate_software.controller.EditPropertyController">
 
-
+    <!-- Left and Top Pane for Header and Navigation -->
     <Pane prefHeight="580.0" prefWidth="75.0" styleClass="sidebar" AnchorPane.leftAnchor="0.0">
 
-        <HBox alignment="CENTER" layoutY="94.0" prefHeight="65.0" prefWidth="75.0">
+        <!-- Edit Property Header Section -->
+        <VBox layoutX="74" prefHeight="75" prefWidth="705.0" alignment="CENTER" styleClass="top-border">
+            <Text layoutX="277.0" layoutY="37.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Edit Property">
+                <font>
+                    <Font size="24.0"/>
+                </font>
+            </Text>
+        </VBox>
+
+        <!-- Back Button -->
+        <HBox alignment="CENTER" layoutX="4.0" layoutY="20.0" prefHeight="65.0" prefWidth="75.0">
             <padding>
                 <Insets left="8.0" right="12.0"/>
             </padding>
-            <HBox alignment="CENTER" prefHeight="65.0" prefWidth="75.0">
-                <padding>
-                    <Insets left="8.0" right="12.0"/>
-                </padding>
-                <FontIcon iconLiteral="fas-home" iconSize="24" styleClass="fontawesomeicon"/>
-            </HBox>
+            <Button fx:id="backButton" layoutX="4.0" layoutY="20.0" mnemonicParsing="false" text="Back" onAction="#onBackClick"/>
         </HBox>
 
-        <HBox alignment="CENTER" layoutX="4.0" layoutY="159.0" prefHeight="65.0" prefWidth="64.0">
+        <!-- Home Button -->
+        <HBox alignment="CENTER" layoutX="4.0" layoutY="94.0" prefHeight="65.0" prefWidth="75.0">
+            <padding>
+                <Insets left="8.0" right="12.0"/>
+            </padding>
+            <Button fx:id="homeButton" styleClass="icon-button" onAction="#handleHomeClick">
+                <graphic>
+                    <FontIcon iconLiteral="fas-home" iconSize="24" styleClass="fontawesomeicon"/>
+                </graphic>
+            </Button>
+        </HBox>
+
+        <!-- Edit Button -->
+        <HBox alignment="CENTER" layoutX="4.0" layoutY="159.0" prefHeight="65.0" prefWidth="75.0">
             <padding>
                 <Insets left="8.0" right="12.0"/>
             </padding>
@@ -53,7 +59,7 @@
             </Button>
         </HBox>
 
-
+        <!-- Settings Button -->
         <HBox alignment="CENTER" layoutX="4.0" layoutY="224.0" prefHeight="65.0" prefWidth="75.0">
             <padding>
                 <Insets left="8.0" right="12.0"/>
@@ -65,8 +71,7 @@
             </Button>
         </HBox>
 
-
-
+        <!-- Charts Button -->
         <HBox alignment="CENTER" layoutX="4.0" layoutY="289.0" prefHeight="65.0" prefWidth="75.0">
             <padding>
                 <Insets left="8.0" right="12.0"/>
@@ -78,8 +83,7 @@
             </Button>
         </HBox>
 
-
-
+        <!-- Sign Out Button -->
         <HBox alignment="CENTER" layoutX="4.0" layoutY="450.0" prefHeight="65.0" prefWidth="75.0">
             <padding>
                 <Insets left="8.0" right="12.0"/>
@@ -90,43 +94,25 @@
                 </graphic>
             </Button>
         </HBox>
-
-
-        <Label layoutX="4.0" layoutY="5.0" styleClass="HOME" text="ESTATE" textFill="#c6baba">
-            <font>
-                <Font name="Hoefler Text Black" size="14.0"/>
-            </font>
-        </Label>
     </Pane>
-
 
     <Rectangle arcHeight="10.0" arcWidth="10.0" fill="#add8ffa2" height="300.0" layoutX="144.0" layoutY="109.0" stroke="BLACK" strokeType="INSIDE" width="500.0" />
     <ListView fx:id="propertyListView" layoutX="154.0" layoutY="119.0" maxHeight="250" maxWidth="200"/>
-    <Text layoutX="390.0" layoutY="140.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Address" />
+
+    <Text layoutX="390.0" layoutY="145.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Address" />
     <TextField fx:id="addressField" layoutX="480.0" layoutY="130.0" />
-    <Text layoutX="390.0" layoutY="212.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Beds" />
-    <TextField fx:id="bedsField" layoutX="480.0" layoutY="202.0" />
-    <Text layoutX="390.0" layoutY="248.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Baths" />
-    <TextField fx:id="bathsField" layoutX="480.0" layoutY="238.0" />
-    <Text layoutX="390.0" layoutY="284.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Cars" />
-    <TextField fx:id="carsField" layoutX="480.0" layoutY="274.0" />
-    <Text layoutX="390.0" layoutY="320.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Rent" />
-    <TextField fx:id="rentField" layoutX="480.0" layoutY="310.0" />
-    <Text layoutX="390.0" layoutY="356.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Utilities" />
-    <TextField fx:id="utilitiesField" layoutX="480.0" layoutY="346.0" />
+    <Text layoutX="390.0" layoutY="185.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Beds" />
+    <TextField fx:id="bedsField" layoutX="480.0" layoutY="170.0" />
+    <Text layoutX="390.0" layoutY="225.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Baths" />
+    <TextField fx:id="bathsField" layoutX="480.0" layoutY="210.0" />
+    <Text layoutX="390.0" layoutY="265.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Cars" />
+    <TextField fx:id="carsField" layoutX="480.0" layoutY="250.0" />
+    <Text layoutX="390.0" layoutY="305.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Rent" />
+    <TextField fx:id="rentField" layoutX="480.0" layoutY="290.0" />
+    <Text layoutX="390.0" layoutY="345.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Utilities" />
+    <TextField fx:id="utilitiesField" layoutX="480.0" layoutY="330.0" />
 
-    <VBox layoutX="74" layoutY="0.0" prefHeight="75" prefWidth="705.0" alignment="CENTER" styleClass = "top-border">
+    <Button layoutX="300.0" layoutY="378.0" mnemonicParsing="false"  text="Edit Property" onAction="#onEditClick"/>
+    <Button layoutX="400.0" layoutY="378.0" mnemonicParsing="false"  text="Delete Property" onAction="#onDeleteClick"/>
 
-        <Text layoutX="286.0" layoutY="55.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Edit Property" textAlignment="CENTER">
-
-        <font>
-                <Font size="24.0"/>
-            </font>
-        </Text>
-    </VBox>
-
-
-    <Button layoutX="244.0" layoutY="378.0" mnemonicParsing="false"  text="Edit Property" onAction="#onEditClick"/>
-    <Button layoutX="349.0" layoutY="378.0" mnemonicParsing="false"  text="Delete Property" onAction="#onDeleteClick"/>
-    <Button fx:id="backButton"  layoutX="464.0" layoutY="378.0" mnemonicParsing="false"  text="Go Back" onAction="#onBackClick"/>
 </AnchorPane>
