--- a/src/main/resources/com/example/real_estate_software/MainDashboard.fxml
+++ b/src/main/resources/com/example/real_estate_software/MainDashboard.fxml
@@ -3,38 +3,42 @@
 <?import org.kordamp.ikonli.javafx.FontIcon?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
-<?import javafx.scene.paint.Color?>
-<?import javafx.scene.shape.Circle?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 <?import javafx.scene.layout.GridPane?>
 
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="580.0" prefWidth="780.0" styleClass="parent" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.real_estate_software.controller.MainDashboardController">
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="580.0"
-            prefWidth="780.0" styleClass="parent" xmlns="http://javafx.com/javafx/21"
-            xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="com.example.real_estate_software.controller.MainDashboardController">
-
+   <!-- Left and Top Pane for Header and Navigation -->
    <Pane prefHeight="580.0" prefWidth="75.0" styleClass="sidebar" AnchorPane.leftAnchor="0.0">
 
-   <HBox alignment="CENTER" layoutY="94.0" prefHeight="65.0" prefWidth="75.0">
-         <padding>
-            <Insets left="8.0" right="12.0"/>
-         </padding>
-         <HBox alignment="CENTER" prefHeight="65.0" prefWidth="75.0">
-            <padding>
-               <Insets left="8.0" right="12.0"/>
-            </padding>
-            <FontIcon iconLiteral="fas-home" iconSize="24" styleClass="fontawesomeicon"/>
-         </HBox>
-      </HBox>
+      <!-- Main Dashboard Header Section -->
+      <VBox layoutX="74" prefHeight="75" prefWidth="705.0" alignment="CENTER" styleClass="top-border">
+         <Text layoutX="277.0" layoutY="37.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Main Dashboard">
+            <font>
+               <Font size="24.0"/>
+            </font>
+         </Text>
+      </VBox>
 
-      <HBox alignment="CENTER" layoutX="4.0" layoutY="159.0" prefHeight="65.0" prefWidth="64.0">
+      <!-- Home Button -->
+        <HBox alignment="CENTER" layoutX="4.0" layoutY="94.0" prefHeight="65.0" prefWidth="75.0">
+            <padding>
+                <Insets left="8.0" right="12.0"/>
+            </padding>
+            <Button fx:id="homeButton" styleClass="icon-button" onAction="#handleHomeClick">
+                <graphic>
+                    <FontIcon iconLiteral="fas-home" iconSize="24" styleClass="fontawesomeicon"/>
+                </graphic>
+            </Button>
+        </HBox>
+
+      <!-- Edit Button -->
+      <HBox alignment="CENTER" layoutX="4.0" layoutY="159.0" prefHeight="65.0" prefWidth="75.0">
          <padding>
             <Insets left="8.0" right="12.0"/>
          </padding>
@@ -45,7 +49,7 @@
          </Button>
       </HBox>
 
-
+      <!-- Settings Button -->
       <HBox alignment="CENTER" layoutX="4.0" layoutY="224.0" prefHeight="65.0" prefWidth="75.0">
          <padding>
             <Insets left="8.0" right="12.0"/>
@@ -57,8 +61,7 @@
          </Button>
       </HBox>
 
-
-
+      <!-- Charts Button -->
       <HBox alignment="CENTER" layoutX="4.0" layoutY="289.0" prefHeight="65.0" prefWidth="75.0">
          <padding>
             <Insets left="8.0" right="12.0"/>
@@ -70,8 +73,7 @@
          </Button>
       </HBox>
 
-
-
+      <!-- Sign Out Button -->
       <HBox alignment="CENTER" layoutX="4.0" layoutY="450.0" prefHeight="65.0" prefWidth="75.0">
          <padding>
             <Insets left="8.0" right="12.0"/>
@@ -82,40 +84,17 @@
             </graphic>
          </Button>
       </HBox>
-
-
-      <Label layoutX="4.0" layoutY="5.0" styleClass="HOME" text="ESTATE" textFill="#c6baba">
-         <font>
-            <Font name="Hoefler Text Black" size="14.0"/>
-         </font>
-      </Label>
    </Pane>
 
-
-   <HBox layoutX="74" layoutY="0.0" prefHeight="75" prefWidth="708.0" alignment="CENTER_RIGHT" styleClass="top-border">
-      <!-- Expandable space to push buttons to the right -->
-      <Pane HBox.hgrow="ALWAYS"/>
-   </HBox>
-
-
-   <Button fx:id="addPropertyButton" layoutX="220.0" layoutY="78.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="166.0"
-           styleClass="add-button" text="ADD NEW PROPERTY" textFill="#549cc9" onAction="#handleAddPropertyClick">
+   <Button fx:id="addPropertyButton" layoutX="350.0" layoutY="78.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="166.0" styleClass="add-button" text="ADD NEW PROPERTY" textFill="#549cc9" onAction="#handleAddPropertyClick">
       <font>
          <Font size="8.0"/>
       </font>
    </Button>
-
-
-   <FontIcon iconLiteral="fas-plus" layoutX="230.0" layoutY="100.0"/>
+   <FontIcon iconLiteral="fas-plus" layoutX="360.0" layoutY="98.0"/>
 
    <GridPane fx:id="propertyGrid" layoutX="92.0" layoutY="117.0" hgap="15.0" vgap="15.0">
-
-
    </GridPane>
-   <Label layoutX="300.0" layoutY="27.0" text="Properties">
-      <font>
-         <Font name="Bodoni 72 Book" size="28.0"/>
-      </font>
-   </Label>
+
 </AnchorPane>
 
