--- a/src/main/resources/com/example/real_estate_software/PropertyDashboard.fxml
+++ b/src/main/resources/com/example/real_estate_software/PropertyDashboard.fxml
@@ -1,12 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-
-
-
-<?import javafx.scene.text.Text?>
-
-
 <?import org.kordamp.ikonli.javafx.FontIcon?>
+<?import javafx.scene.text.Text?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -15,25 +10,43 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.layout.VBox?>
 
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="580.0" prefWidth="780.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.real_estate_software.controller.PropertyDashboardController">
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="580.0"
-            prefWidth="780.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="com.example.real_estate_software.controller.PropertyDashboardController">
+   <!-- Left and Top Pane for Header and Navigation -->
    <Pane prefHeight="580.0" prefWidth="75.0" styleClass="sidebar" AnchorPane.leftAnchor="0.0">
 
-      <HBox alignment="CENTER" layoutY="110.0" prefHeight="65.0" prefWidth="75.0">
+      <!-- Property Dashboard Header Section -->
+      <VBox layoutX="74" prefHeight="75" prefWidth="705.0" alignment="CENTER" styleClass="top-border">
+         <Text layoutX="277.0" layoutY="37.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Property Dashboard">
+            <font>
+               <Font size="24.0"/>
+            </font>
+         </Text>
+         <Text fx:id="addressText" layoutX="400.0" layoutY="61.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ADDRESS"/>
+      </VBox>
+
+      <!-- Back Button -->
+      <HBox alignment="CENTER" layoutX="4.0" layoutY="20.0" prefHeight="65.0" prefWidth="75.0">
          <padding>
             <Insets left="8.0" right="12.0"/>
          </padding>
-         <HBox alignment="CENTER" prefHeight="65.0" prefWidth="75.0">
-            <padding>
-               <Insets left="8.0" right="12.0"/>
-            </padding>
-            <FontIcon iconLiteral="fas-home" iconSize="24" styleClass="fontawesomeicon"/>
-         </HBox>
+         <Button fx:id="backButton" layoutX="4.0" layoutY="20.0" mnemonicParsing="false" text="Back" onAction="#onBackClick"/>
       </HBox>
 
-      <HBox alignment="CENTER" layoutX="4.0" layoutY="159.0" prefHeight="65.0" prefWidth="64.0">
+      <!-- Home Button -->
+        <HBox alignment="CENTER" layoutX="4.0" layoutY="94.0" prefHeight="65.0" prefWidth="75.0">
+            <padding>
+                <Insets left="8.0" right="12.0"/>
+            </padding>
+            <Button fx:id="homeButton" styleClass="icon-button" onAction="#handleHomeClick">
+                <graphic>
+                    <FontIcon iconLiteral="fas-home" iconSize="24" styleClass="fontawesomeicon"/>
+                </graphic>
+            </Button>
+        </HBox>
+
+      <!-- Edit Button -->
+      <HBox alignment="CENTER" layoutX="4.0" layoutY="159.0" prefHeight="65.0" prefWidth="75.0">
          <padding>
             <Insets left="8.0" right="12.0"/>
          </padding>
@@ -44,6 +57,7 @@
          </Button>
       </HBox>
 
+      <!-- Settings Button -->
       <HBox alignment="CENTER" layoutX="4.0" layoutY="224.0" prefHeight="65.0" prefWidth="75.0">
          <padding>
             <Insets left="8.0" right="12.0"/>
@@ -55,6 +69,7 @@
          </Button>
       </HBox>
 
+      <!-- Charts Button -->
       <HBox alignment="CENTER" layoutX="4.0" layoutY="289.0" prefHeight="65.0" prefWidth="75.0">
          <padding>
             <Insets left="8.0" right="12.0"/>
@@ -66,6 +81,7 @@
          </Button>
       </HBox>
 
+      <!-- Sign Out Button -->
       <HBox alignment="CENTER" layoutX="4.0" layoutY="450.0" prefHeight="65.0" prefWidth="75.0">
          <padding>
             <Insets left="8.0" right="12.0"/>
@@ -77,25 +93,12 @@
          </Button>
       </HBox>
    </Pane>
-<VBox layoutX="74" prefHeight="75" prefWidth="705.0" alignment="CENTER" styleClass = "top-border">
 
-   <Text layoutX="199.0" layoutY="31.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Property Dashboard">
-
-      <font>
-         <Font size="24.0"/>
-      </font>
-   </Text>
-</VBox>
-
-   <Button fx:id = "addTenant" layoutX="550.0" layoutY="225.0" mnemonicParsing="false" text="Add Tenant" onAction="#onTenantClick"/>
-
-   <Button fx:id = "removeTenant" layoutX="550.0" layoutY="190.0" mnemonicParsing="false" text="Remove Tenant" onAction="#onRemoveTenantClick"/>
-
-   <Button fx:id = "assignRent" layoutX="550.0" layoutY="264.0" mnemonicParsing="false" text="Assign Rent" onAction="#onRentClick"/>
-   <Button fx:id = "utilities" layoutX="550.0" layoutY="305.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="81.0" text="Utilities" onAction="#onUtilitiesClick"/>
-   <Button fx:id = "maintenanceRequest" layoutX="550.0" layoutY="346.0" mnemonicParsing="false" prefWidth="185.0"
-           text="Property Maintenance Request" onAction="#onPropertyMaintenanceClick"/>
-
+   <Button fx:id="addTenant" layoutX="550.0" layoutY="190.0" mnemonicParsing="false" text="Add Tenant" onAction="#onTenantClick"/>
+   <Button fx:id="removeTenant" layoutX="550.0" layoutY="230.0" mnemonicParsing="false" text="Remove Tenant" onAction="#onRemoveTenantClick"/>
+   <Button fx:id="assignRent" layoutX="550.0" layoutY="270.0" mnemonicParsing="false" text="Assign Rent" onAction="#onRentClick"/>
+   <Button fx:id="utilities" layoutX="550.0" layoutY="310.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="81.0" text="Utilities" onAction="#onUtilitiesClick"/>
+   <Button fx:id="maintenanceRequest" layoutX="550.0" layoutY="350.0" mnemonicParsing="false" prefWidth="185.0" text="Property Maintenance Request" onAction="#onPropertyMaintenanceClick"/>
 
    <VBox layoutX="100.0" layoutY="177.0" spacing="20.0" styleClass="property-stats-box">
       <Text fx:id="totalRentalIncomeText" layoutX="100.0" layoutY="177.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Total Rental Income"/>
@@ -106,10 +109,6 @@
       <Text fx:id="waterBillText" layoutX="100.0" layoutY="291.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Water Bill"/>
       <Text fx:id="electricityBillText" layoutX="100.0" layoutY="319.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Electricity Bill"/>
       <Text fx:id="bondAmountText" layoutX="100.0" layoutY="148.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Total Bond Amount"/>
-
    </VBox>
 
-
-   <Button fx:id = "backButton" layoutX="100.0" layoutY="9.0" mnemonicParsing="false" text="Back" onAction="#onBackClick"/>
-   <Text fx:id="addressText" layoutX="400.0" layoutY="61.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ADDRESS"/>
 </AnchorPane>
