--- a/src/main/resources/com/example/real_estate_software/PropertyMaintenance.fxml
+++ b/src/main/resources/com/example/real_estate_software/PropertyMaintenance.fxml
@@ -1,42 +1,51 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.text.Text?>
-
 <?import org.kordamp.ikonli.javafx.FontIcon?>
+<?import javafx.scene.text.Text?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
-<?import javafx.scene.paint.Color?>
-<?import javafx.scene.shape.Circle?>
 <?import javafx.scene.text.Font?>
-<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.VBox ?>
 
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="580.0" prefWidth="780.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.real_estate_software.controller.PropertyMaintenanceController">
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="580.0" prefWidth="780.0"
-      xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1"
-      fx:controller="com.example.real_estate_software.controller.PropertyMaintenanceController">
-
+    <!-- Left and Top Pane for Header and Navigation -->
     <Pane prefHeight="580.0" prefWidth="75.0" styleClass="sidebar" AnchorPane.leftAnchor="0.0">
 
-        <HBox alignment="CENTER" layoutY="94.0" prefHeight="65.0" prefWidth="75.0">
+        <!-- Property Maintenance Request Header Section -->
+        <VBox layoutX="74" prefHeight="75" prefWidth="705.0" alignment="CENTER" styleClass="top-border">
+            <Text layoutX="277.0" layoutY="37.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Property Maintenance Request">
+                <font>
+                    <Font size="24.0"/>
+                </font>
+            </Text>
+        </VBox>
+
+        <!-- Back Button -->
+        <HBox alignment="CENTER" layoutX="4.0" layoutY="20.0" prefHeight="65.0" prefWidth="75.0">
             <padding>
                 <Insets left="8.0" right="12.0"/>
             </padding>
-            <HBox alignment="CENTER" prefHeight="65.0" prefWidth="75.0">
-                <padding>
-                    <Insets left="8.0" right="12.0"/>
-                </padding>
-                <FontIcon iconLiteral="fas-home" iconSize="24" styleClass="fontawesomeicon"/>
-            </HBox>
+            <Button fx:id="backButton" layoutX="4.0" layoutY="20.0" mnemonicParsing="false" text="Back" onAction="#onBackClick"/>
         </HBox>
 
-        <HBox alignment="CENTER" layoutX="4.0" layoutY="159.0" prefHeight="65.0" prefWidth="64.0">
+        <!-- Home Button -->
+        <HBox alignment="CENTER" layoutX="4.0" layoutY="94.0" prefHeight="65.0" prefWidth="75.0">
+            <padding>
+                <Insets left="8.0" right="12.0"/>
+            </padding>
+            <Button fx:id="homeButton" styleClass="icon-button" onAction="#handleHomeClick">
+                <graphic>
+                    <FontIcon iconLiteral="fas-home" iconSize="24" styleClass="fontawesomeicon"/>
+                </graphic>
+            </Button>
+        </HBox>
+
+        <!-- Edit Button -->
+        <HBox alignment="CENTER" layoutX="4.0" layoutY="159.0" prefHeight="65.0" prefWidth="75.0">
             <padding>
                 <Insets left="8.0" right="12.0"/>
             </padding>
@@ -47,7 +56,7 @@
             </Button>
         </HBox>
 
-
+        <!-- Settings Button -->
         <HBox alignment="CENTER" layoutX="4.0" layoutY="224.0" prefHeight="65.0" prefWidth="75.0">
             <padding>
                 <Insets left="8.0" right="12.0"/>
@@ -59,8 +68,7 @@
             </Button>
         </HBox>
 
-
-
+        <!-- Charts Button -->
         <HBox alignment="CENTER" layoutX="4.0" layoutY="289.0" prefHeight="65.0" prefWidth="75.0">
             <padding>
                 <Insets left="8.0" right="12.0"/>
@@ -72,8 +80,7 @@
             </Button>
         </HBox>
 
-
-
+        <!-- Sign Out Button -->
         <HBox alignment="CENTER" layoutX="4.0" layoutY="450.0" prefHeight="65.0" prefWidth="75.0">
             <padding>
                 <Insets left="8.0" right="12.0"/>
@@ -84,50 +91,32 @@
                 </graphic>
             </Button>
         </HBox>
-
-
-        <Label layoutX="4.0" layoutY="5.0" styleClass="HOME" text="ESTATE" textFill="#c6baba">
-            <font>
-                <Font name="Hoefler Text Black" size="14.0"/>
-            </font>
-        </Label>
     </Pane>
 
-
-    <VBox layoutX="74" prefHeight="75" prefWidth="705.0" alignment="CENTER" styleClass = "top-border">
-
-        <Text layoutX="254.0" layoutY="95.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Property Maintenance Request">
-            <font>
-                <Font size="24.0" />
-            </font>
-        </Text>
-    </VBox>
-
-
-    <Button fx:id = "backButton" layoutX="100.0" layoutY="9.0" mnemonicParsing="false" text="Back" onAction="#onBackClick"/>
-    <Button layoutX="346.0" layoutY="427.0" mnemonicParsing="false" prefHeight="41.0" prefWidth="108.0" text="Add Files">
-         <font>
+    <Text layoutX="80.0" layoutY="164.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Filename Uploaded:">
+        <font>
             <Font size="18.0" />
-         </font>
-      </Button>
-      <Text layoutX="80.0" layoutY="164.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Filename Uploaded:">
-         <font>
+        </font>
+    </Text>
+    <Text layoutX="80.0" layoutY="216.0" strokeType="OUTSIDE" strokeWidth="0.0" text="File size:">
+        <font>
             <Font size="18.0" />
-         </font>
-      </Text>
-      <Text layoutX="80.0" layoutY="216.0" strokeType="OUTSIDE" strokeWidth="0.0" text="File size:">
-         <font>
+        </font>
+    </Text>
+    <Text layoutX="232.0" layoutY="374.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Please note, only PDF Files can be uploaded">
+        <font>
             <Font size="18.0" />
-         </font>
-      </Text>
-      <Text layoutX="232.0" layoutY="374.0" strokeType="OUTSIDE" strokeWidth="0.0" text="*Please note, only PDF Files can be uploaded">
-         <font>
-            <Font size="18.0" />
-         </font>
-      </Text>
-      <Text layoutX="298.0" layoutY="406.0" strokeType="OUTSIDE" strokeWidth="0.0" text="File size is maximum of 50MB">
-         <font>
+        </font>
+    </Text>
+    <Text layoutX="298.0" layoutY="406.0" strokeType="OUTSIDE" strokeWidth="0.0" text="File size is maximum of 50MB">
+        <font>
             <Font size="16.0" />
-         </font>
-      </Text>
+        </font>
+    </Text>
+    <Button layoutX="346.0" layoutY="427.0" mnemonicParsing="false" prefHeight="41.0" prefWidth="108.0" text="Add File">
+        <font>
+            <Font size="18.0" />
+        </font>
+    </Button>
+
 </AnchorPane>
