--- a/src/main/resources/com/example/real_estate_software/SignIn.fxml
+++ b/src/main/resources/com/example/real_estate_software/SignIn.fxml
@@ -1,30 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.control.Hyperlink?>
 
 <!-- The Create Account FXML was created in Scenebuilder which allows the Owner to sign in to the application with the saved log in details-->
-
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.control.PasswordField?>
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.real_estate_software.controller.SignInController">
+
     <Label alignment="CENTER" contentDisplay="RIGHT" layoutX="160.0" layoutY="33.0" text="My Home Manager">
         <font>
             <Font size="35.0" />
         </font>
     </Label>
-    <TextField fx:id="emailField" layoutX="220.0" layoutY="220.0" promptText="Email" />
-    <PasswordField fx:id="passwordField" layoutX="220.0" layoutY="258.0" promptText="Password" />
-    <Button fx:id="signInButton" layoutX="237.0" layoutY="320.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="125.0" text="Sign In" onAction="#onSignInClick" />
-    <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="200.0" layoutY="85.0" pickOnBounds="true"
-               preserveRatio="true">
+
+    <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="200.0" layoutY="85.0" pickOnBounds="true" preserveRatio="true">
         <Image url="@images/HomeLogo.jpg"/>
     </ImageView>
-    <Button fx:id="signUpButton" layoutX="237.0" layoutY="354.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="125.0" text="Sign Up" onAction="#onSignUpClick" />
-    <Hyperlink layoutX="250.0" layoutY="291.0" text="Forgot Password" />
+
+    <TextField fx:id="emailField" layoutX="220.0" layoutY="220.0" promptText="Email" />
+    <PasswordField fx:id="passwordField" layoutX="220.0" layoutY="260.0" promptText="Password" />
+    <Hyperlink layoutX="250.0" layoutY="290.0" text="Forgot Password" />
+    <Button fx:id="signInButton" layoutX="237.0" layoutY="320.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="125.0" text="Sign In" onAction="#onSignInClick" />
+    <Button fx:id="signUpButton" layoutX="237.0" layoutY="360.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="125.0" text="Sign Up" onAction="#onSignUpClick" />
+
 </Pane>
