--- a/src/main/resources/com/example/real_estate_software/Utilities.fxml
+++ b/src/main/resources/com/example/real_estate_software/Utilities.fxml
@@ -1,125 +1,129 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-
+<?import org.kordamp.ikonli.javafx.FontIcon?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-
 <?import javafx.scene.text.Text?>
-<?import org.kordamp.ikonli.javafx.FontIcon?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
-<?import javafx.scene.paint.Color?>
-<?import javafx.scene.shape.Circle?>
 <?import javafx.scene.text.Font?>
-<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.VBox?>
 
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="580.0" prefWidth="780.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.real_estate_software.controller.UtilitiesController">
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="580.0" prefWidth="780.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1"
-   fx:controller="com.example.real_estate_software.controller.UtilitiesController">
+    <!-- Left and Top Pane for Header and Navigation -->
     <Pane prefHeight="580.0" prefWidth="75.0" styleClass="sidebar" AnchorPane.leftAnchor="0.0">
 
-    <HBox alignment="CENTER" layoutY="94.0" prefHeight="65.0" prefWidth="75.0">
-        <padding>
-            <Insets left="8.0" right="12.0"/>
-        </padding>
-        <HBox alignment="CENTER" prefHeight="65.0" prefWidth="75.0">
+        <!-- Utilities Header Section -->
+        <VBox layoutX="74" prefHeight="75" prefWidth="705.0" alignment="CENTER" styleClass="top-border">
+            <Text layoutX="277.0" layoutY="37.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Utilities">
+                <font>
+                    <Font size="24.0"/>
+                </font>
+            </Text>
+        </VBox>
+
+        <!-- Back Button -->
+        <HBox alignment="CENTER" layoutX="4.0" layoutY="20.0" prefHeight="65.0" prefWidth="75.0">
             <padding>
                 <Insets left="8.0" right="12.0"/>
             </padding>
-            <FontIcon iconLiteral="fas-home" iconSize="24" styleClass="fontawesomeicon"/>
+            <Button fx:id="backButton" layoutX="4.0" layoutY="20.0" mnemonicParsing="false" text="Back" onAction="#onBackClick"/>
         </HBox>
-    </HBox>
 
-    <HBox alignment="CENTER" layoutX="4.0" layoutY="159.0" prefHeight="65.0" prefWidth="64.0">
-        <padding>
-            <Insets left="8.0" right="12.0"/>
-        </padding>
-        <Button fx:id="editButton" styleClass="icon-button" onAction="#handleEditClick">
-            <graphic>
-                <FontIcon iconLiteral="far-edit" iconSize="24" styleClass="fontawesomeicon"/>
-            </graphic>
-        </Button>
-    </HBox>
+        <!-- Home Button -->
+        <HBox alignment="CENTER" layoutX="4.0" layoutY="94.0" prefHeight="65.0" prefWidth="75.0">
+            <padding>
+                <Insets left="8.0" right="12.0"/>
+            </padding>
+            <Button fx:id="homeButton" styleClass="icon-button" onAction="#handleHomeClick">
+                <graphic>
+                    <FontIcon iconLiteral="fas-home" iconSize="24" styleClass="fontawesomeicon"/>
+                </graphic>
+            </Button>
+        </HBox>
 
-    <HBox alignment="CENTER" layoutX="4.0" layoutY="224.0" prefHeight="65.0" prefWidth="75.0">
-        <padding>
-            <Insets left="8.0" right="12.0"/>
-        </padding>
-        <Button fx:id="settingsButton" styleClass="icon-button" onAction="#handleSettingsClick">
-            <graphic>
-                <FontIcon iconLiteral="fas-cogs" iconSize="24" styleClass="fontawesomeicon"/>
-            </graphic>
-        </Button>
-    </HBox>
+        <!-- Edit Button -->
+        <HBox alignment="CENTER" layoutX="4.0" layoutY="159.0" prefHeight="65.0" prefWidth="75.0">
+            <padding>
+                <Insets left="8.0" right="12.0"/>
+            </padding>
+            <Button fx:id="editButton" styleClass="icon-button" onAction="#handleEditClick">
+                <graphic>
+                    <FontIcon iconLiteral="far-edit" iconSize="24" styleClass="fontawesomeicon"/>
+                </graphic>
+            </Button>
+        </HBox>
 
-    <HBox alignment="CENTER" layoutX="4.0" layoutY="289.0" prefHeight="65.0" prefWidth="75.0">
-        <padding>
-            <Insets left="8.0" right="12.0"/>
-        </padding>
-        <Button fx:id="viewStatsButton" onAction="#handleViewStatsClick">
-            <graphic>
-                <FontIcon iconLiteral="fas-chart-bar" iconSize="24" styleClass="fontawesomeicon"/>
-            </graphic>
-        </Button>
-    </HBox>
+        <!-- Settings Button -->
+        <HBox alignment="CENTER" layoutX="4.0" layoutY="224.0" prefHeight="65.0" prefWidth="75.0">
+            <padding>
+                <Insets left="8.0" right="12.0"/>
+            </padding>
+            <Button fx:id="settingsButton" styleClass="icon-button" onAction="#handleSettingsClick">
+                <graphic>
+                    <FontIcon iconLiteral="fas-cogs" iconSize="24" styleClass="fontawesomeicon"/>
+                </graphic>
+            </Button>
+        </HBox>
 
-    <HBox alignment="CENTER" layoutX="4.0" layoutY="450.0" prefHeight="65.0" prefWidth="75.0">
-        <padding>
-            <Insets left="8.0" right="12.0"/>
-        </padding>
-        <Button fx:id="signOutButton" styleClass="icon-button" onAction="#handleSignOutClick">
-            <graphic>
-                <FontIcon iconLiteral="fas-sign-out-alt" iconSize="24" styleClass="fontawesomeicon"/>
-            </graphic>
-        </Button>
-    </HBox>
-    <VBox layoutX="74" layoutY="0.0" prefHeight="75" prefWidth="705.0" alignment="CENTER" styleClass = "top-border">
+        <!-- Charts Button -->
+        <HBox alignment="CENTER" layoutX="4.0" layoutY="289.0" prefHeight="65.0" prefWidth="75.0">
+            <padding>
+                <Insets left="8.0" right="12.0"/>
+            </padding>
+            <Button fx:id="viewStatsButton" onAction="#handleViewStatsClick">
+                <graphic>
+                    <FontIcon iconLiteral="fas-chart-bar" iconSize="24" styleClass="fontawesomeicon"/>
+                </graphic>
+            </Button>
+        </HBox>
 
-        <Text layoutX="277.0" layoutY="37.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Utilities">
-
-            <font>
-                <Font size="24.0"/>
-            </font>
-        </Text>
-    </VBox>
+        <!-- Sign Out Button -->
+        <HBox alignment="CENTER" layoutX="4.0" layoutY="450.0" prefHeight="65.0" prefWidth="75.0">
+            <padding>
+                <Insets left="8.0" right="12.0"/>
+            </padding>
+            <Button fx:id="signOutButton" styleClass="icon-button" onAction="#handleSignOutClick">
+                <graphic>
+                    <FontIcon iconLiteral="fas-sign-out-alt" iconSize="24" styleClass="fontawesomeicon"/>
+                </graphic>
+            </Button>
+        </HBox>
     </Pane>
-        <!-- Main Horizontal Layout for Images, TextFields, and Buttons -->
-        <HBox layoutX="100" layoutY="194" spacing="50" alignment="CENTER">
 
-            <!-- Water Bill Section -->
-            <VBox alignment="CENTER" spacing="20">
-                <ImageView fitHeight="90.0" fitWidth="88.0" pickOnBounds="true" preserveRatio="true">
-                    <Image url="@images/water.png"/>
-                </ImageView>
-                <TextField promptText="Amount"/>
-                <Button fx:id="addWater" mnemonicParsing="false" text="Add Water Bill" onAction="#onWaterClick"/>
-            </VBox>
+    <!-- Main Horizontal Layout for Images, TextFields, and Buttons -->
+    <HBox layoutX="100" layoutY="194" spacing="50" alignment="CENTER">
 
-            <!-- Electricity Bill Section -->
-            <VBox alignment="CENTER" spacing="20">
-                <ImageView fitHeight="116.0" fitWidth="210.0" pickOnBounds="true" preserveRatio="true">
-                    <Image url="@images/electricity.png"/>
-                </ImageView>
-                <TextField promptText="Amount"/>
-                <Button fx:id="addElectricity" mnemonicParsing="false" text="Add Electricity Bill" onAction="#onElectricityClick"/>
-            </VBox>
+        <!-- Water Bill Section -->
+        <VBox alignment="CENTER" spacing="20">
+            <ImageView fitHeight="90.0" fitWidth="88.0" pickOnBounds="true" preserveRatio="true">
+                <Image url="@images/water.png"/>
+            </ImageView>
+            <TextField promptText="Amount"/>
+            <Button fx:id="addWater" mnemonicParsing="false" text="Add Water Bill" onAction="#onWaterClick"/>
+        </VBox>
 
-            <!-- Gas Bill Section -->
-            <VBox alignment="CENTER" spacing="20">
-                <ImageView fitHeight="99.0" fitWidth="99.0" pickOnBounds="true" preserveRatio="true">
-                    <Image url="@images/Gas.png"/>
-                </ImageView>
-                <TextField promptText="Amount"/>
-                <Button fx:id="addGas" mnemonicParsing="false" text="Add Gas Bill" onAction="#onGasClick"/>
-            </VBox>
+        <!-- Electricity Bill Section -->
+        <VBox alignment="CENTER" spacing="20">
+            <ImageView fitHeight="116.0" fitWidth="210.0" pickOnBounds="true" preserveRatio="true">
+                <Image url="@images/electricity.png"/>
+            </ImageView>
+            <TextField promptText="Amount"/>
+            <Button fx:id="addElectricity" mnemonicParsing="false" text="Add Electricity Bill" onAction="#onElectricityClick"/>
+        </VBox>
 
-        </HBox>
-    <Button fx:id = "backButton" layoutX="100.0" layoutY="9.0" mnemonicParsing="false" text="Back" onAction="#onBackClick"/>
+        <!-- Gas Bill Section -->
+        <VBox alignment="CENTER" spacing="20">
+            <ImageView fitHeight="99.0" fitWidth="99.0" pickOnBounds="true" preserveRatio="true">
+                <Image url="@images/gas.png"/>
+            </ImageView>
+            <TextField promptText="Amount"/>
+            <Button fx:id="addGas" mnemonicParsing="false" text="Add Gas Bill" onAction="#onGasClick"/>
+        </VBox>
+    </HBox>
 </AnchorPane>
