--- a/src/main/resources/com/example/real_estate_software/dashboard.css
+++ b/src/main/resources/com/example/real_estate_software/dashboard.css
@@ -1,3 +1,7 @@
+  /**
+     styling for the various pages that utilise the side bar and the top border
+     */
+
 .parent{
     -fx-background-color:#F5F5F7;
 }
