Added full functionality for uploading PDF and docx to repository, created a new directory called Maintenance Files which stores all the uploaded documents. Only allows for PDF and Word Docs, therefore no images etc. Updated test suite too

--- a/src/main/resources/com/example/real_estate_software/PropertyMaintenance.fxml
+++ b/src/main/resources/com/example/real_estate_software/PropertyMaintenance.fxml
@@ -113,7 +113,7 @@
             <Font size="16.0" />
         </font>
     </Text>
-    <Button layoutX="346.0" layoutY="427.0" mnemonicParsing="false" prefHeight="41.0" prefWidth="108.0" text="Add File">
+    <Button fx:id= "addFileButton" layoutX = "346.0" layoutY="427.0" mnemonicParsing="false" prefHeight="41.0" prefWidth="108.0" text="Add File" onAction="#onAddFileClick">
         <font>
             <Font size="18.0" />
         </font>
